deployments/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    apps.nalej.io/name: ${APP_NAME}
  name: ${APP_NAME}
spec:
  replicas: 1
  selector:
    matchLabels:
      apps.nalej.io/name: ${APP_NAME}
  template:
    metadata:
      labels:
        apps.nalej.io/name: ${APP_NAME}
    spec:
      containers:
        - env:
            - name: NEXT_PUBLIC_API_BASE_URL
              value: ${NEXT_PUBLIC_API_BASE_URL}
            - name: KEYCLOAK_CLIENT_ID
              value: '${KEYCLOAK_CLIENT_ID}'
            - name: KEYCLOAK_CLIENT_SECRET
              value: '${KEYCLOAK_CLIENT_SECRET}'
            - name: KEYCLOAK_ISSUER
              value: '${KEYCLOAK_ISSUER}'
            - name: AUTH_TIMEOUT
              value: '${AUTH_TIMEOUT}'
            - name: NEXTAUTH_SECRET
              value: '${AUTH_SECRET}'
            - name: NEXTAUTH_URL
              value: '${NEXTAUTH_URL}'
          image: ${ECR_REGISTRY}/${APP_NAME}:${IMAGE_TAG}
          imagePullPolicy: Always
          name: ${APP_NAME}
          ports:
            - containerPort: 3000
              protocol: TCP
      restartPolicy: Always
