deployments/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    apps.nalej.io/name: ${APP_NAME}
  name: ${APP_NAME}
spec:
  ports:
    - name: 'web'
      port: 80
      targetPort: 3000
  selector:
    apps.nalej.io/name: ${APP_NAME}
  type: LoadBalancer
